--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=tienda
 server.port = 80
+
+#esta config determina el formato de la fecha en la consola
+logging.pattern.dateformat = hh:mm:ss
+
+#para removder el banner de spring de la consola
+spring.main.banner-mode=off
+
+#para deshabilitar el cache en el servidor para desarrollo
+spring.thymeleaf.cacge=false
