--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,14 @@ logging.level.org.type.descriptor.sql.BasicBinder=TRACE
 #Vistas personalizadas de Error
 #server.error.whitelabel.enabled=false
 server.error.path=/error
+
+#Definiendo información para utilizar cuenta de Correo para usuarios
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=naoalro38@gmail.com
+spring.mail.password=rsmfrsefbekjrpni
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#nombre del servidor para enviar el correo
+servidor.http=http://localhost
